github/envoy/envoy-local-config.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_udp
      address:
        socket_address:
          protocol: UDP
          address: 0.0.0.0
          port_value: 7001
      udp_listener_config:
        quic_options: {}
        downstream_socket_config:
          prefer_gro: true
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: HTTP3
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: http3-server
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          transport_socket:
            name: envoy.transport_sockets.quic
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.transport_sockets.quic.v3.QuicDownstreamTransport
              downstream_tls_context:
                common_tls_context:
                  tls_params:
                    tls_minimum_protocol_version: TLSv1_3
                  tls_certificates:
                    - certificate_chain:
                        filename: servercert.pem
                      private_key:
                        filename: serverkey.pem

  clusters:
    - name: http3-server
      connect_timeout: 3s
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http3_protocol_options: {}
      dns_lookup_family: V4_ONLY
      load_assignment:
        cluster_name: http3-server
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 7000
      transport_socket:
        name: envoy.transport_sockets.quic
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.quic.v3.QuicUpstreamTransport
          upstream_tls_context:
            common_tls_context:
              tls_params:
                tls_minimum_protocol_version: TLSv1_3
              validation_context:
                trusted_ca:
                  filename: ca.pem
            sni: localhost
